# iOverlayPerformance

./: README.md
BoostApp/: .gitignore  CMakeLists.txt  Util.cpp  Util.h  main.cpp  run.sh  test_0_checkerboard.cpp  test_0_checkerboard.h  test_1_not_overlap.cpp  test_1_not_overlap.h  test_2_lines_net.cpp  test_2_lines_net.h  test_3_spiral.cpp  test_3_spiral.h  test_4_windows.cpp  test_4_windows.h  test_5_nested_squares.cpp  test_5_nested_squares.h
ClipperApp/: .gitignore  CMakeLists.txt  CheckerboardTest.cpp  CheckerboardTest.h  GenerateAPI.cpp  GenerateAPI.h  IrregularPolygonTest.cpp  IrregularPolygonTest.h  LinesNetTest.cpp  LinesNetTest.h  ManySquaresTest.cpp  ManySquaresTest.h  NestedSquaresTest.cpp  NestedSquaresTest.h  NoOverlapTest.cpp  NoOverlapTest.h  NotOverlapTest.cpp  NotOverlapTest.h  UnionTest.cpp  UnionTest.h  Util.cpp  Util.h  WindowsTest.cpp  WindowsTest.h  main.cpp  run.sh  test_0_checkerboard.cpp  test_0_checkerboard.h  test_1_not_overlap.cpp  test_1_not_overlap.h  test_2_lines_net.cpp  test_2_lines_net.h  test_3_saw.cpp  test_3_saw.h  test_3_spiral.cpp  test_3_spiral.h  test_4_windows.cpp  test_4_windows.h  test_5_nested_squares.cpp  test_5_nested_squares.h
ClipperApp/Clipper2Lib/include/clipper2/: clipper.core.h  clipper.engine.h  clipper.export.h  clipper.h  clipper.minkowski.h  clipper.rectclip.h
ClipperApp/Clipper2Lib/src/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp
iOverlayApp/src/: main.rs
iOverlayApp/src/test/: checkerboard_test.rs  concentric_squares_test.rs  irregular_polygon_test.rs  lines_net_test.rs  lines_test.rs  mod.rs  nested_squares_test.rs  no_overlap_test.rs  random_polygons_test.rs  squares_test.rs  util.rs  windows_test.rs
iOverlayAppRust/: Cargo.toml  run.sh
iOverlayAppRust/src/: main.rs
iOverlayAppRust/src/test/: checkerboard_test.rs  irregular_polygon_test.rs  lines_net_test.rs  mod.rs  nested_squares_test.rs  not_overlap_test.rs  test_0_checkerboard.rs  test_1_not_overlap.rs  test_2_lines_net.rs  test_3_saw.rs  test_3_saw_test.rs  test_3_spiral.rs  test_4_windows.rs  test_5_nested_squares.rs  test_6_corrosion.rs  test_7_concentric.rs  test_8_wind_mill.rs  util.rs  windows_test.rs
iOverlayAppRust/src/util/: args.rs
