[package]
name = "overlay_performance"
version = "0.1.0"
edition = "2021"

[dependencies]
#i_float = { version = "^1.0.0" }
#i_shape = { version = "^1.0.0" }
#i_overlay = { version = "^1.0.0" }
i_float = { path = "../../iFloat" }
i_shape = { path = "../../iShape" }
i_overlay = { path = "../../iOverlay" }