[package]
name = "overlay_performance"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1

[dependencies]
i_overlay = { path = "../../iOverlay/iOverlay", default-features = true }

#i_float = { version = "1.9.0" }
#i_shape = { version = "^1.0.2" }
#i_overlay = { version = "^1.1.0" }

#i_float = { path = "../../iFloat" }
#i_shape = { path = "../../iShape" }
#i_overlay = { path = "../../iOverlay", default-features = false }
#i_overlay = "~3.0.0"